fix: force mapping actions not to wrap
Closes #31

--- a/scss/molgenis/theme-3/modules/_mapping-service.scss
+++ b/scss/molgenis/theme-3/modules/_mapping-service.scss
@@ -1,4 +1,12 @@
 .mod-mappingservice {
+    #mapping-projects-tbl {
+        tr {
+            td:first-child {
+                display: flex;
+            }
+        }
+    }
+
     .attribute-mapping-table-container {
         overflow-x: auto;
     }
